--- a/main/index.html
+++ b/main/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('https://i.ibb.co/VBLZv5x/000064.jpg');
+  background-image: url('https://raw.githubusercontent.com/Keetawin/Keetawan/master/image/000064.JPG');
   background-position: center;
   padding-top: 40%;
   opacity:100%;
@@ -33,14 +33,14 @@ body, html {
 
 /* Second image (Gallery) */
 .bgimg-2 {
-  background-image: url("https://i.ibb.co/wJNt7Kh/000039.jpg");
+  background-image: url("https://raw.githubusercontent.com/Keetawin/Keetawan/master/image/000039.JPG");
   min-height: 400px;
   opacity:100%
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("https://i.ibb.co/CwwX4Bd/000001.jpg");
+  background-image: url("https://raw.githubusercontent.com/Keetawin/Keetawan/master/image/000001.JPG");
   min-height: 400px;
  
 }
@@ -219,7 +219,7 @@ body, html {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="https://i.ibb.co/Bs0TZX5/000063.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="https://raw.githubusercontent.com/Keetawin/Keetawan/master/image/000063.JPG" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
